<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/blank"
        android:id="@+id/textViewResult"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:height="80dp"
        android:background="#0c9d04"
        android:textColor="#4df7efef" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:id="@+id/button1"
        android:layout_below="@+id/button4"
        android:layout_toLeftOf="@+id/button5"
        android:layout_toStartOf="@+id/button5"
        android:onClick="tapOne" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:id="@+id/button2"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:onClick="tapTwo" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:id="@+id/button3"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:onClick="tapThree" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:id="@+id/button4"
        android:layout_below="@+id/button7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="tapFour" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:id="@+id/button5"
        android:layout_below="@+id/button8"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignStart="@+id/button8"
        android:onClick="tapFive" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:id="@+id/button6"
        android:layout_below="@+id/button8"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:onClick="tapSix" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:id="@+id/button7"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/textViewResult"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="tapSeven" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:id="@+id/button8"
        android:layout_alignTop="@+id/button7"
        android:layout_toRightOf="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:onClick="tapEight" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:id="@+id/button9"
        android:layout_alignTop="@+id/button8"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:onClick="tapNine" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/button0"
        android:layout_below="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1"
        android:onClick="tapZero" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backspace"
        android:id="@+id/buttonBackspace"
        android:layout_above="@+id/button8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button9"
        android:layout_alignEnd="@+id/button9"
        android:onClick="tapBackSpace" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/button3"
        android:layout_alignTop="@+id/buttonBackspace"
        android:layout_alignBottom="@+id/button0"
        android:id="@+id/relativeLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:id="@+id/buttonDivide"
            android:layout_marginTop="49dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="tapDivide" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:id="@+id/buttonMultiply"
            android:layout_above="@+id/buttonAdd"
            android:layout_toRightOf="@+id/buttonDivide"
            android:layout_toEndOf="@+id/buttonDivide"
            android:onClick="tapMultiply" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/buttonAdd"
            android:layout_below="@+id/buttonDivide"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="tapAdd" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract"
            android:id="@+id/buttonSubtract"
            android:layout_alignBottom="@+id/buttonAdd"
            android:layout_alignLeft="@+id/buttonMultiply"
            android:layout_alignStart="@+id/buttonMultiply"
            android:onClick="tapSubtract" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/buttonClear"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/buttonMultiply"
            android:layout_alignEnd="@+id/buttonMultiply"
            android:nestedScrollingEnabled="true"
            android:onClick="tapClear" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEnter"
            android:layout_below="@+id/buttonAdd"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/buttonSubtract"
            android:layout_alignEnd="@+id/buttonSubtract"
            android:text="@string/enter"
            android:background="#c8679cfe"
            android:onClick="tapEnter" />

    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" ></FrameLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/footer"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decimal"
        android:id="@+id/buttonDecimal"
        android:layout_below="@+id/button2"
        android:layout_toRightOf="@+id/button1"
        android:layout_toLeftOf="@+id/relativeLayout"
        android:layout_toStartOf="@+id/relativeLayout"
        android:onClick="tapDecimal" />

</RelativeLayout>
